--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ body {
 
 
 .slide:first-child {
-  background: url("1.png") no-repeat
+  background: url(<a href="url">link text</a>") no-repeat
     center top/cover;
 }
 
-.slide:nth-child(2) {
+<!-- .slide:nth-child(2) {
   background: url("2.png") no-repeat
     center top/cover;
 }
@@ -57,7 +57,7 @@ body {
   background: url("3.png") no-repeat
     center top/cover;
 }
-
+-->
 
 .buttons button#prev {
   position: absolute;
