--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 
 
 .slide:first-child {
-  background: url(<a href="url">link text</a>") no-repeat
+  background: url(<a href="https://photos.app.goo.gl/MZJW1ViMnKJGduME8">Mirror</a>") no-repeat
     center top/cover;
 }
 
