--- a/index.html
+++ b/index.html
@@ -44,20 +44,70 @@ body {
 
 
 .slide:first-child {
-  background: url(<a href="https://photos.app.goo.gl/MZJW1ViMnKJGduME8">Mirror</a>") no-repeat
+  background: url("Pic01.jpg") no-repeat
     center top/cover;
 }
 
-<!-- .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+.slide:nth-child(2) {
+  background: url("Pic02.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("Pic03.jpg") no-repeat
     center top/cover;
 }
--->
+
+  .slide:nth-child(4) {
+  background: url("Pic04.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(5) {
+  background: url("Pic05.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(6) {
+  background: url("Pic06.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(7) {
+  background: url("Pic07.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(8) {
+  background: url("Pic08.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(9) {
+  background: url("Pic09.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(10) {
+  background: url("Pic10.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(11) {
+  background: url("Pic11.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(12) {
+  background: url("Pic12.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(13) {
+  background: url("Pic13.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(14) {
+  background: url("Pic14.jpg") no-repeat
+    center top/cover;
+}
+.slide:nth-child(15) {
+  background: url("Pic15.jpg") no-repeat
+    center top/cover;
+}
+
+
 
 .buttons button#prev {
   position: absolute;
