--- a/index.html
+++ b/index.html
@@ -44,38 +44,38 @@ body {
 
 
 .slide:first-child {
-  background: url("Pic01.jpg") no-repeat
+  background: url("Pic01.jpeg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("Pic02.jpg") no-repeat
+  background: url("Pic02.jpeg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("Pic03.jpg") no-repeat
+  background: url("Pic03.jpeg") no-repeat
     center top/cover;
 }
 
   .slide:nth-child(4) {
-  background: url("Pic04.jpg") no-repeat
+  background: url("Pic04.jpeg") no-repeat
     center top/cover;
 }
 .slide:nth-child(5) {
-  background: url("Pic05.jpg") no-repeat
+  background: url("Pic05.jpeg") no-repeat
     center top/cover;
 }
 .slide:nth-child(6) {
-  background: url("Pic06.jpg") no-repeat
+  background: url("Pic06.jpeg") no-repeat
     center top/cover;
 }
 .slide:nth-child(7) {
-  background: url("Pic07.jpg") no-repeat
+  background: url("Pic07.jpeg") no-repeat
     center top/cover;
 }
 .slide:nth-child(8) {
-  background: url("Pic08.jpg") no-repeat
+  background: url("Pic08.jpeg") no-repeat
     center top/cover;
 }
 .slide:nth-child(9) {
