--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
 <style>
   @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap");
-
+theme: jekyll-theme-modernist
 * {
   box-sizing: border-box;
   margin: 0;
