--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .slide {
   position: absolute;
   top: 0;
   left: 0;
-  width: 40%;
-  height: 40%;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
