--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ theme: jekyll-theme-modernist
   margin: 0;
   padding: 0;
 }
+theme: jekyll-theme-modernist
 
 body {
   font-family: "Lexend", sans-serif;
