--- a/index.html
+++ b/index.html
@@ -137,11 +137,13 @@ body {
   color: #362a2b;
 }
 
-@media (min-width: 640px) and (min-height: 640px) {
+@media (min-width: 300px) 
+  <!-- and (min-height: 640px) -->
+  {
   .slide .content {
     bottom: 70px;
     left: -600px;
-    width: 600px;
+    width: 300px;
     padding: 2rem;
     line-height: 1.6;
   }
