--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 .slider {
   position: relative;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   overflow: visible;
 }
 
@@ -33,8 +33,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 50%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
@@ -137,7 +137,7 @@ body {
   color: #362a2b;
 }
 
-@media (min-width: 300px) 
+@media (max-width: 300px) 
   <!-- and (min-height: 640px) -->
   {
   .slide .content {
