--- a/index.html
+++ b/index.html
@@ -46,66 +46,66 @@ body {
 
 .slide:first-child {
   background: url("Pic01.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 
 .slide:nth-child(2) {
   background: url("Pic02.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 
 .slide:nth-child(3) {
   background: url("Pic03.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 
   .slide:nth-child(4) {
   background: url("Pic04.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(5) {
   background: url("Pic05.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(6) {
   background: url("Pic06.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(7) {
   background: url("Pic07.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(8) {
   background: url("Pic08.jpeg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(9) {
   background: url("Pic09.jpg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(10) {
   background: url("Pic10.jpg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(11) {
   background: url("Pic11.jpg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(12) {
   background: url("Pic12.jpg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(13) {
   background: url("Pic13.jpg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(14) {
   background: url("Pic14.jpg") no-repeat
-    center top/cover;
+    center;
 }
 .slide:nth-child(15) {
   background: url("Pic15.jpg") no-repeat
-    center top/cover;
+    center;
 }
 
 
@@ -163,6 +163,18 @@ body {
   <!-- partial:index.partial.html -->
   <div class="slider">
     <div class="slide current"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
 
