--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 50%;
-  height: 50%;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
@@ -46,7 +46,7 @@ body {
 
 .slide:first-child {
   background: url("Pic01.jpeg") no-repeat
-    center;
+    center center;
 }
 
 .slide:nth-child(2) {
