--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body {
   overflow: visible;
 }
 
+
 .slide {
   position: absolute;
   top: 0;
@@ -46,7 +47,7 @@ body {
 
 .slide:first-child {
   background: url("Pic01.jpeg") no-repeat
-    center center;
+    no-repeat center center/cover;
 }
 
 .slide:nth-child(2) {
@@ -137,8 +138,7 @@ body {
   color: #362a2b;
 }
 
-@media (max-width: 300px) 
-  <!-- and (min-height: 640px) -->
+@media (max-width: 300px) and (min-height: 640px)
   {
   .slide .content {
     bottom: 70px;
