--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 60%;
+  height: 60%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
 }
@@ -46,17 +46,17 @@ body {
 
 
 .slide:first-child {
-  background: url("Pic01.jpeg") no-repeat
+  background: url("Pic01.jpeg")
     no-repeat center center/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("Pic02.jpeg") no-repeat
-    center;
+  background: url("Pic02.jpeg")
+    center center/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("Pic03.jpeg") no-repeat
+  background: url("Pic03.jpeg")
     center;
 }
 
