--- a/index.html
+++ b/index.html
@@ -101,14 +101,18 @@ body {
     center;
 }
 .slide:nth-child(14) {
-  background: url("Pic14.jpg") no-repeat
+  background: url("Pic14.JPG") no-repeat
     center;
 }
 .slide:nth-child(15) {
-  background: url("Pic15.jpg") no-repeat
+  background: url("Pic15.JPG") no-repeat
     center;
 }
 
+.slide:nth-child(16) {
+  background: url("Pic16.jpg") no-repeat
+    center;
+}
 
 
 .buttons button#prev {
@@ -177,8 +181,9 @@ body {
     <div class="slide"></div>
     <div class="slide"></div>
     <div class="slide"></div>
-
+    <div class="slide"></div>
   </div>
+  
   <div class="buttons">
     <button id="prev"><i class="fas fa-arrow-left"></i></button>
     <button id="next"><i class="fas fa-arrow-right"></i></button>
