--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body {
     center;
 }
 .slide:nth-child(5) {
-  background: url("Pic05.jpeg") no-repeat
+  background: url("Pic05.jpg") no-repeat
     center;
 }
 .slide:nth-child(6) {
