--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@ body {
 
 
 .slide:first-child {
-  background: url("Pic01.jpeg")
-    no-repeat center center/cover;
+background: url("Pic01.jpeg")
+    no-repeat center center/contain;
 }
 
 .slide:nth-child(2) {
-  background: url("Pic02.jpeg")
+background: url("Pic02.jpeg")
     center center/cover;
 }
 
