--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
-  overflow: visible;
+ <!-- overflow: visible; -->
 }
 
 
 .slide {
   position: absolute;
+  background-size: contain;  /* Use contain to fit the whole image */
+  background-position: center;  /* Center the image */
+  background-repeat: no-repeat;  /* Avoid tiling the image */
   top: 0;
   left: 0;
   width: 100%;
