--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ body {
 
 .slider {
   position: relative;
+  position: absolute;
+  background-size: contain;  /* Use contain to fit the whole image */
+  background-position: center;  /* Center the image */
+  background-repeat: no-repeat;  /* Avoid tiling the image */
   width: 100vw;
   height: 100vh;
  <!-- overflow: visible; -->
