--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Full-Screen Responsive Image Slider</title>
+  <title>Pics of me :)</title>
 <!--  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
   <link rel="stylesheet" href="./style.css"> -->
 <style>
@@ -24,7 +24,7 @@ body {
 
 .slider {
   position: relative;
-  position: absolute;
+  /* position: absolute; */
   background-size: contain;  /* Use contain to fit the whole image */
   background-position: center;  /* Center the image */
   background-repeat: no-repeat;  /* Avoid tiling the image */
