--- a/index.html
+++ b/index.html
@@ -59,66 +59,66 @@ background: url("Pic01.jpeg")
 
 .slide:nth-child(2) {
 background: url("Pic02.jpeg")
-    center center/cover;
+     no-repeat center center/contain;
 }
 
 .slide:nth-child(3) {
   background: url("Pic03.jpeg")
-    center;
+    no-repeat center center/contain;
 }
 
   .slide:nth-child(4) {
-  background: url("Pic04.jpeg") no-repeat
-    center;
+  background: url("Pic04.jpeg")  
+    no-repeat center center/contain;
 }
 .slide:nth-child(5) {
-  background: url("Pic05.jpg") no-repeat
-    center;
+  background: url("Pic05.jpg") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(6) {
-  background: url("Pic06.jpeg") no-repeat
-    center;
+  background: url("Pic06.jpeg") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(7) {
-  background: url("Pic07.jpeg") no-repeat
-    center;
+  background: url("Pic07.jpeg") 
+    no-repeat center center/contain;
 }
 .slide:nth-child(8) {
-  background: url("Pic08.jpeg") no-repeat
-    center;
+  background: url("Pic08.jpeg") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(9) {
-  background: url("Pic09.jpg") no-repeat
-    center;
+  background: url("Pic09.jpg") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(10) {
-  background: url("Pic10.jpg") no-repeat
-    center;
+  background: url("Pic10.jpg") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(11) {
-  background: url("Pic11.jpg") no-repeat
-    center;
+  background: url("Pic11.jpg") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(12) {
-  background: url("Pic12.jpg") no-repeat
-    center;
+  background: url("Pic12.jpg")
+     no-repeat center center/contain;
 }
 .slide:nth-child(13) {
-  background: url("Pic13.jpg") no-repeat
-    center;
+  background: url("Pic13.jpg")
+   no-repeat center center/contain;
 }
 .slide:nth-child(14) {
-  background: url("Pic14.JPG") no-repeat
-    center;
+  background: url("Pic14.JPG") 
+     no-repeat center center/contain;
 }
 .slide:nth-child(15) {
-  background: url("Pic15.JPG") no-repeat
-    center;
+  background: url("Pic15.JPG") 
+     no-repeat center center/contain;
 }
 
 .slide:nth-child(16) {
-  background: url("Pic16.jpg") no-repeat
-    center;
+  background: url("Pic16.jpg") 
+     no-repeat center center/contain;
 }
 
 
