--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
       background-image: url("Pic16.jpg");
     }
 
+       .caption {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: rgba(54, 42, 43, 0.7); /* semi-transparent background */
+      color: #e5ebf3;
+      padding: 10px;
+      border-radius: 5px;
+    }
+
     .buttons button#prev {
       position: absolute;
       top: 50%;
@@ -156,22 +167,54 @@
 
 <body>
   <div class="slider">
-    <div class="slide current"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
-    <div class="slide"></div>
+    <div class="slide current">
+      <div class="caption">The classic mirror selfie, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Walking through Catalonia, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Murder Mystery Dinner outfit - I'm Clare Voyan, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Girona Bridge designed by Monsieur Eiffel, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Me and my prints, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Catalonia coastline, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Me and my hero, 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Somewhere on the way to Hogsback? 2024</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Dinner with sibs at mine <3, 2023</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Janky self portrait - #dilettante #beginnersmind - 2023</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Expanse of Serowe, Botswana, 2023</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Sardinia coast, damn, 2023</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Mussels in Normandie, 2023</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Nicaragua, 2015</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Oakland, 2019</div>
+    </div>
+    <div class="slide">
+      <div class="caption">Writing my MA dissertation like... 2017</div>
+    </div>
   </div>
 
   <div class="buttons">
