--- a/index.html
+++ b/index.html
@@ -109,16 +109,17 @@
       background-image: url("Pic16.jpg");
     }
 
-       .caption {
-      position: absolute;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgba(54, 42, 43, 0.7); /* semi-transparent background */
-      color: #e5ebf3;
-      padding: 10px;
-      border-radius: 5px;
-    }
+   .caption {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(54, 42, 43, 0.7); /* semi-transparent background */
+  color: #e5ebf3;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 2rem; /* Increase this value for larger text */
+}
 
     .buttons button#prev {
       position: absolute;
