--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
   transform: translateX(-50%);
   background-color: rgba(54, 42, 43, 0.7); /* semi-transparent background */
   color: #e5ebf3;
+  font-family: "Lexend", sans-serif;
   padding: 10px;
   border-radius: 5px;
   font-size: 4rem; /* Increase this value for larger text */
