--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
   transform: translateX(-50%);
   background-color: rgba(54, 42, 43, 0.7); /* semi-transparent background */
   color: #e5ebf3;
-  font: "Lexend";
+  /*font: "Lexend"; */
   padding: 10px;
   border-radius: 5px;
-  font-size: 2.5rem; /* Increase this value for larger text */
+  font-size: 1.5rem; /* Increase this value for larger text */
 }
 
     .buttons button#prev {
