--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   /*font: "Lexend"; */
   padding: 10px;
   border-radius: 5px;
-  font-size: 1.5rem; /* Increase this value for larger text */
+  /*font-size: 1.5rem;  Increase this value for larger text */
 }
 
     .buttons button#prev {
