--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       background-repeat: no-repeat;  /* Avoid tiling the image */
       opacity: 0;
       transition: opacity 0.4s ease-in-out;
-      display: flex;
+      /*display: flex;
       align-items: flex-end; /* Align captions to the bottom */
     }
 
