--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   position: absolute;
   bottom: 20px;
   left: 50%;
+  width: 50%
   transform: translateX(-50%);
   background-color: rgba(54, 42, 43, 0.7); /* semi-transparent background */
   color: #e5ebf3;
