--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     }
 
    .caption {
-  position: relative center;
-  bottom: 20px;
+  position: bottom center;
+  /*bottom: 20px; */
   left: 50%;
   width: 50%
   transform: translateX(-50%);
