--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
    .caption {
   position: bottom center;
-  /*bottom: 20px; */
+bottom: 5%;
   left: 50%;
   width: 50%
   transform: translateX(-50%);
