--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
    .caption {
   position: bottom center;
-bottom: 5%;
+bottom: 10px;
   left: 50%;
   width: 50%
   transform: translateX(-50%);
