--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     }
 
    .caption {
-  position: bottom center;
-bottom: 10px;
+  position: relative;
+bottom: 15px;
   left: 50%;
   width: 50%
   transform: translateX(-50%);
