--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   .caption {
   position: absolute;
   bottom: 20px; /* Distance from the bottom of the slide */
-  left: 50%;
+ /* left: 50%; */
   transform: translateX(-50%);
   width: 80%; /* Set width relative to the slide */
   max-height: 15%; /* Optional: limit the height */
