--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     }
 
     .slider {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden; /* Ensure no overflow */
-    }
+  display: flex;
+  justify-content: center; /* Center slides horizontally */
+  align-items: center; /* Center slides vertically */
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+ /* overflow: hidden; /* Ensure no overflow */
+}
 
     .slide {
       position: absolute;
@@ -39,6 +42,8 @@
       transition: opacity 0.4s ease-in-out;
       display: flex;
       align-items: flex-end; /* Align captions to the bottom */
+      justify-content: center; /* Center slides horizontally */
+
     }
 
     .slide.current {
