--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
- /* overflow: hidden; /* Ensure no overflow */
+ overflow: hidden; /* Ensure no overflow */
 }
 
     .slide {
@@ -41,7 +41,7 @@
       opacity: 0;
       transition: opacity 0.4s ease-in-out;
       display: flex;
-      align-items: flex-end; /* Align captions to the bottom */
+     align-items: flex-end; /* Align captions to the bottom */
       justify-content: center; /* Center slides horizontally */
 
     }
