--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       opacity: 0;
       transition: opacity 0.4s ease-in-out;
       display: flex;
-     align-items: flex-end; /* Align captions to the bottom */
-      justify-content: center; /* Center slides horizontally */
+      align-items: flex-end; /* Align captions to the bottom */
+      /*justify-content: center; /* Center slides horizontally */
 
     }
 
