--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
- overflow: hidden; /* Ensure no overflow */
+ overflow: visible; /* Ensure no overflow */
 }
 
     .slide {
@@ -119,7 +119,7 @@
   bottom: 20px; /* Distance from the bottom of the slide */
  left: 25px; 
   transform: translateX(-50%);
-  width: 80%; /* Set width relative to the slide */
+  width: 75%; /* Set width relative to the slide */
   max-height: 15%; /* Optional: limit the height */
   background-color: rgba(54, 42, 43, 0.7); /* Semi-transparent background */
   color: #e5ebf3;
