--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   .caption {
   position: absolute;
   bottom: 20px; /* Distance from the bottom of the slide */
- left: 25px; 
+ left: 25%; 
   transform: translateX(-50%);
   width: 75%; /* Set width relative to the slide */
   max-height: 15%; /* Optional: limit the height */
