--- a/index.html
+++ b/index.html
@@ -117,18 +117,20 @@
   .caption {
   position: absolute;
   bottom: 20px; /* Distance from the bottom of the slide */
- left: 25%; 
-  transform: translateX(-50%);
-  width: 40%; /* Set width relative to the slide */
-  max-height: 15%; /* Optional: limit the height */
+  left: 50%; /* Center horizontally */
+  transform: translateX(-50%); /* Adjust to center */
+  width: auto; /* Set width to auto to hug content */
+  max-width: 75%; /* Optional: limit the maximum width */
   background-color: rgba(54, 42, 43, 0.7); /* Semi-transparent background */
   color: #e5ebf3;
-  padding: 10px; /* Space inside the caption */
+  padding: 10px; /* Reduce padding for a tighter fit */
   border-radius: 5px;
   font-size: 1.5rem; /* Increase text size if needed */
   text-align: center; /* Center text inside the caption */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5); /* Optional: add shadow for depth */
+  /*white-space: nowrap; /* Prevent text from wrapping, if desired */
 }
+ 
 
 
     .buttons button#prev {
