--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
   left: 50%; /* Center horizontally */
   transform: translateX(-50%); /* Adjust to center */
   width: auto; /* Set width to auto to hug content */
-  max-width: 75%; /* Optional: limit the maximum width */
+  /* max-width: 75%; /* Optional: limit the maximum width */
   background-color: rgba(54, 42, 43, 0.7); /* Semi-transparent background */
   color: #e5ebf3;
-  padding: 10px; /* Reduce padding for a tighter fit */
+  padding: 5px; /* Reduce padding for a tighter fit */
   border-radius: 5px;
   font-size: 1.5rem; /* Increase text size if needed */
   text-align: center; /* Center text inside the caption */
