--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Pics of me :)</title>
+  <title>Pics of me 😎</title>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;700 &display=swap");
 
